# higher-order

./: cabal.project  higher-order.cabal
src/Higher/: Biconst.hs  Bifunctor.hs  Biidentity.hs  Bind.hs  Biproduct.hs  Bisum.hs  Biunit.hs  Category.hs  Comonad.hs  Const.hs  Copointed.hs  Corecursive.hs  Coyoneda.hs  Extend.hs  Foldable.hs  Function.hs  Functor.hs  Generics.hs  Internal.hs  Monad.hs  Monoid.hs  Pointed.hs  Product.hs  Recursive.hs  Semigroup.hs  Sum.hs
src/Higher/Comonad/: Cofree.hs  Cofreer.hs
src/Higher/Functor/: Bind.hs  Extend.hs
src/Higher/Monad/: Free.hs  Freer.hs
