name:                higher-order
version:             0.0.0.0
synopsis:            Higher-order (type-indexed) analogues of various typeclasses.
-- description:
homepage:            https://github.com/robrix/higher-order
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2018 Rob Rix
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Higher.Biconst
                     , Higher.Biproduct
                     , Higher.Bisum
                     , Higher.Biunit
                     , Higher.Foldable
                     , Higher.Function
                     , Higher.Functor
                     , Higher.Generics
                     , Higher.Monoid
                     , Higher.Product
                     , Higher.Semigroup
                     , Higher.Sum
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing
